--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,37 @@
 ---
 ---
 
+@ARTICLE{slope,
+   author = {Ahmed, Junaid and Sharma, Sarthak and Majumdar, Anshuman and J. {Krishna Murthy} and {Madhava Krishna}, K.
+  },
+    title = "{The Earth ain't Flat: Monocular Reconstruction of Vehicles on Steep and Graded Roads from a Moving Camera}",
+  journal = {ArXiv e-prints},
+     year = 2018,
+    month = mar,
+    arxiv = {1803.02057},
+}
+
+@ARTICLE{CalibNet,
+   author = {{Iyer}, G. and {Ram R.}, K. and J. {Krishna Murthy} and {Madhava Krishna}, K.
+  },
+    title = "{CalibNet: Self-Supervised Extrinsic Calibration using 3D Spatial Transformer Networks}",
+  journal = {ArXiv e-prints},
+     year = 2018,
+    month = mar,
+    arxiv = {1803.08181},
+    projectpage = {https://epiception.github.io/CalibNet/},
+}
+
+
 % ICRA 2017
 @inproceedings{Krishna_ICRA,
   title={Reconstructing Vehicles From a Single Image: Shape Priors for Road Scene Understanding},
   author={J. {Krishna Murthy} and G.V. Sai Krishna and Chhaya, Falak and K. Madhava Krishna},
   booktitle = {Proceedings of the IEEE Conference on Robotics and Automation},
-  year={2017}
+  year={2017},
+  month={June},
+  pdf={2017icra.pdf},
+  poster={2017icra_poster.pdf},
 }
 
 % IROS 2017
@@ -14,21 +39,26 @@
   title={Shape Priors for Real-Time Monocular Object Localization in Dynamic Environments},
   author={J. {Krishna Murthy} and Sharma, Sarthak and K. Madhava Krishna},
   booktitle = {Proceedings of the IEEE Conference on Intelligent Robots and Systems (In Press)},
-  year={2017}
+  year={2017},
+  month={October},
+  pdf={2017iros.pdf},
+  poster={2017iros_poster.pdf},
 }
 
 @inproceedings{Parv_ICRA,
   title={Constructing Category-Specific Models for Monocular Object SLAM},
   author={Parv Parkhiya and Rishabh Khawad and J. {Krishna Murthy} and {K. Madhava Krishna} and Brojeshwar Bhowmick},
   booktitle = {Proceedings of the IEEE Conference on Robotics and Automation (in press)},
-  year={2018}
+  year={2018},
+  arxiv={1802.09292},
 }
 
 @inproceedings{Junaid_ICRA,
-  title={Constructing Category-Specific Models for Monocular Object SLAM},
+  title={Beyond Pixels: Leveraging Geometry and Shape Cues for Multi-Object Tracking},
   author={Sarthak Sharma and Junaid Ahmed Ansari and J. {Krishna Murthy} and K. Madhava Krishna},
   booktitle = {Proceedings of the IEEE Conference on Robotics and Automation (in press)},
-  year={2018}
+  year={2018},
+  arxiv={1802.09298},
 }
 
 @INPROCEEDINGS{Maxxyt, 
